// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormViewToggler component should render default view 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
  direction="row"
  spacing={0}
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Tooltip)
      title="Switch to tabbed mode"
    >
      <WithStyles(Switch)
        checked={false}
        color="primary"
        value="tabbed"
      />
    </WithStyles(Tooltip)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <Connect(WithStyles(HelpIcon))
      IconComponent={[Function]}
      buttonLabel="Got it"
      text={
        <div>
          <br />
          <h3>
            Tab navigation
          </h3>
          <p>
            To navigate tabs while in tabbed mode, hold CTRL and SHIFT and use the LEFT and RIGHT arrow keys.
          </p>
          <h3>
            Form style
          </h3>
          <p>
            To switch between tabbed or full form mode, hold CTRL and SHIFT and use the UP and DOWN arrow keys.
          </p>
          <p>
            Your preference is saved as a cookie on this browser and it will remember your preference.
          </p>
        </div>
      }
      title="Keyboard shortcuts"
      tooltip="Learn about keyboard shortcuts"
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`FormViewToggler component should render tooltip for full form 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
  direction="row"
  spacing={0}
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Tooltip)
      title="Switch to full form mode"
    >
      <WithStyles(Switch)
        checked={true}
        color="primary"
        value="tabbed"
      />
    </WithStyles(Tooltip)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <Connect(WithStyles(HelpIcon))
      IconComponent={[Function]}
      buttonLabel="Got it"
      text={
        <div>
          <br />
          <h3>
            Tab navigation
          </h3>
          <p>
            To navigate tabs while in tabbed mode, hold CTRL and SHIFT and use the LEFT and RIGHT arrow keys.
          </p>
          <h3>
            Form style
          </h3>
          <p>
            To switch between tabbed or full form mode, hold CTRL and SHIFT and use the UP and DOWN arrow keys.
          </p>
          <p>
            Your preference is saved as a cookie on this browser and it will remember your preference.
          </p>
        </div>
      }
      title="Keyboard shortcuts"
      tooltip="Learn about keyboard shortcuts"
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
